@@ -5,6 +5,10 @@
     HARD= _ "Hard"
     NIGHTMARE= _ "Nightmare"
 
+    liminal_description= _ "Liminal units fight better during twilight while fighting normally during day and night. 
+
+Twilight: +25% Damage"
+
     lawful_description= _ "Lawful units fight better during the day, and worse at night.
 
 Day: +25% Damage
